# CMakeHelloWorld

./: .gitignore  CMakeHelloWorld.cpp  CMakeHelloWorld.rc  CMakeLists.txt  PrecompiledHeader.cmake  README.md  Resource.h  generate-devenv-vc11.bat  generate-devenv-vc12.bat  generate-ninja-clang.bat  generate-ninja-vc11.bat  generate-ninja-vc12.bat
CMakeMFCApp/: CMakeLists.txt  CMakeMFCApp.cpp  CMakeMFCApp.h  CMakeMFCApp.rc  CMakeMFCAppDoc.cpp  CMakeMFCAppDoc.h  CMakeMFCAppView.cpp  CMakeMFCAppView.h  ChildFrm.cpp  MainFrm.cpp  Resource.h  stdafx.cpp
CMakeMFCApp/res/: CMakeMFCApp.rc2
CMakeWindowsApp/: CMakeLists.txt  CMakeWindowsApp.cpp  CMakeWindowsApp.rc  Resource.h  stdafx.cpp
