IF(CMAKE_C_SIMULATE_ID OR CMAKE_CXX_SIMULATE_ID)
  CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
ELSE()
  CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
ENDIF()
PROJECT(CMakeHelloWorld)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
ADD_SUBDIRECTORY(CMakeWindowsApp)
ADD_SUBDIRECTORY(CMakeMFCApp)

